--- a/composer.json
+++ b/composer.json
@@ -15,9 +15,9 @@
     ],
     "require": {
         "php": ">=5.6",
-        "kirki-framework/core": "dev-master",
-        "kirki-framework/module-css": "dev-master",
-        "kirki-framework/module-webfonts": "dev-master"
+        "kirki-framework/core": "*",
+        "kirki-framework/module-css": "*",
+        "kirki-framework/module-webfonts": "*"
     },
     "autoload"    : {
 		"psr-4" : {
