--- a/composer.json
+++ b/composer.json
@@ -15,7 +15,7 @@
     ],
     "require": {
         "php": ">=5.6",
-        "kirki-framework/core": "*",
+        "kirki-framework/util": "*",
         "kirki-framework/module-css": "*",
         "kirki-framework/module-webfonts": "*"
     },
